[package]
name = "micro-moka"
version = "0.1.4"
edition = "2018"
rust-version = "1.76"

description = "A lightweight, single-threaded cache library with W-TinyLFU eviction"
license = "MIT OR Apache-2.0"
# homepage = "https://"
documentation = "https://docs.rs/micro-moka/"
repository = "https://github.com/user1303836/micro-moka"
keywords = ["cache"]
categories = ["caching"]
readme = "README.md"
exclude = [".circleci", ".devcontainer", ".github", ".gitpod.yml", ".vscode"]

[dependencies]
tagptr = "0.2"

# Opt-out serde and stable_deref_trait features
# https://github.com/Manishearth/triomphe/pull/5
triomphe = { version = "0.1.13", default-features = false }

[dev-dependencies]
anyhow = "1.0.19"
getrandom = "0.2"
once_cell = "1.7"

[target.'cfg(trybuild)'.dev-dependencies]
trybuild = "1.0.103"

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
# Build the doc with some features enabled.
features = []
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(kani)",
    "cfg(skeptic)",
    "cfg(circleci)",
    "cfg(trybuild)",
    "cfg(beta_clippy)",
] }
